# my_python_cookie

./: cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
